Fix hover alignment

--- a/app/assets/stylesheets/show_and_transaction/project_show.css
+++ b/app/assets/stylesheets/show_and_transaction/project_show.css
@@ -120,8 +120,6 @@
   opacity: 9;
   font-size: 20px;
   text-align: center;
-  /*top: 45%;
-  left: 29%;*/
 }
 
 .rewards-list-item-not-selected h2, .rewards-list-item-selected h2 {
